irsa-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: irsa-test
  namespace: demo-app
  labels:
    app: irsa-test
    owner: platform
    env: dev
spec:
  serviceAccountName: irsa-debug
  securityContext:
    seccompProfile:
      type: RuntimeDefault
  containers:
  - name: aws
    image: 910321623036.dkr.ecr.ap-south-1.amazonaws.com/platform/awscli:2.15.57
    command: ["sleep", "3600"]
    securityContext:
      allowPrivilegeEscalation: false
      runAsNonRoot: true
      capabilities:
        drop:
          - ALL
    resources:
      requests:
        cpu: "50m"
        memory: "64Mi"
      limits:
        cpu: "100m"
        memory: "128Mi"
