signed-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: signed-test
  namespace: demo-app
spec:
  containers:
    - name: app
      image: 910321623036.dkr.ecr.ap-south-1.amazonaws.com/platform/secure-supply-chain-demo-app@sha256:c84f11c6afacc9a854231cf43b62fef635bce8c3ba320835d3df9cd04adc3b7e
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
