only-ecr-images-audit.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: only-ecr-images-audit
spec:
  validationFailureAction: Audit
  background: true
  rules:
  - name: only-allow-ecr
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Images must come from ECR"
      pattern:
        spec:
          containers:
          - image: "910321623036.dkr.ecr.ap-south-1.amazonaws.com/*"
